fix github actions